// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="main__header"
>
  <div
    className="bp3-navbar navBar bp3-dark"
  />
</div>
`;

exports[`should render correctly with header close in mobile view 1`] = `
<div
  className="main__header main__header--mobile"
  onClick={[Function]}
  role="button"
  tabIndex="-1"
>
  <div
    className="main__header__target"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;

exports[`should render correctly with header open in mobile view 1`] = `
<div
  className="main__header main__header--mobile main__header--mobile--open"
>
  <div
    className="bp3-navbar navBar bp3-dark"
  />
</div>
`;
